crates/mabo-compiler/tests/snapshots/compiler__error_validate@enum_gen_unused.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "enum Sample<T> {\n    One @1,\n    Two { value: String @1 } @2,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/enum_gen_unused.mabo
---
  × invalid generic type found
  ├─▶ unused generic type argument found
  ╰─▶ unused generic type argument `T`
   ╭─[enum_gen_unused.mabo:1:13]
 1 │ enum Sample<T> {
   ·             ┬
   ·             ╰── declared here
 2 │     One @1,
 3 │     Two { value: String @1 } @2,
 4 │ }
   ╰────
  help: each declared generic must be used in some way

