crates/mabo-compiler/tests/snapshots/compiler__error_validate@enum_named_dup_id.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two {\n        field1: String @1,\n        field2: String @1,\n    } @2,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/enum_named_dup_id.mabo
---
  × duplicate ID found
  ├─▶ duplicate ID in a field
  ╰─▶ duplicate ID 1 in field `field2`, already used in `field1`
   ╭─[enum_named_dup_id.mabo:4:24]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two {
 4 │         field1: String @1,
   ·                        ─┬
   ·                         ╰── first declared here
 5 │         field2: String @1,
   ·                        ─┬
   ·                         ╰── used here again
 6 │     } @2,
 7 │ }
   ╰────
  help: the IDs for each field must be unique

