crates/mabo-compiler/tests/snapshots/compiler__error_validate@enum_named_dup_name.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two {\n        field: String @1,\n        field: String @2,\n    } @2,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/enum_named_dup_name.mabo
---
  × duplicate name found
  ├─▶ duplicate name in a field
  ╰─▶ duplicate field name `field`
   ╭─[enum_named_dup_name.mabo:4:9]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two {
 4 │         field: String @1,
   ·         ──┬──
   ·           ╰── first declared here
 5 │         field: String @2,
   ·         ──┬──
   ·           ╰── used here again
 6 │     } @2,
 7 │ }
   ╰────
  help: the names of each field must be unique

