crates/mabo-compiler/tests/snapshots/compiler__error_validate@enum_unnamed_dup_id.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two(String @1, String @1) @2,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/enum_unnamed_dup_id.mabo
---
  × duplicate ID found
  ├─▶ duplicate ID in a field
  ╰─▶ duplicate ID 1 in position 2, already used at 1
   ╭─[enum_unnamed_dup_id.mabo:3:16]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two(String @1, String @1) @2,
   ·                ─┬         ─┬
   ·                 │          ╰── used here again
   ·                 ╰── first declared here
 4 │ }
   ╰────
  help: the IDs for each field must be unique

