crates/mabo-compiler/tests/snapshots/compiler__error_validate@enum_unnamed_tuple_too_large.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two((u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8) @1) @2,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/enum_unnamed_tuple_too_large.mabo
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭more than 12 elements❬W❭ are invalid
   ╭─[enum_unnamed_tuple_too_large.mabo:3:9]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two((u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8) @1) @2,
   ·         ──────────────────────────┬─────────────────────────
   ·                                   ╰── declared here
 4 │ }
   ╰────
  help: a tuple must have between 2 and 12 elements
