crates/mabo-compiler/tests/snapshots/compiler__error_validate@enum_variant_dup_name.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    One @2,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/enum_variant_dup_name.mabo
---
  × duplicate name found
  ├─▶ duplicate name in an enum variant
  ╰─▶ duplicate variant name `One` in enum
   ╭─[enum_variant_dup_name.mabo:1:1]
 1 │ enum Sample {
 2 │     One @1,
   ·     ─┬─
   ·      ╰── first declared here
 3 │     One @2,
   ·     ─┬─
   ·      ╰── used here again
 4 │ }
   ╰────
  help: the names of each variant must be unique

